fixed spacing and layout

--- a/future-cyber-threats/5g-and-beyond.html
+++ b/future-cyber-threats/5g-and-beyond.html
@@ -344,46 +344,26 @@
         <div class="text-white mt-8">
           <h3 class="text-2xl font-medium text-[#E2C8F1] mb-3">Practical Usage</h3>
         
-          <!-- Accordion Item 1 -->
-          <details class="group" open>
-            <summary class="flex items-center justify-between cursor-pointer list-disc list-inside text-base font-medium marker:text-white">
-              <span class="text-xl">Telecom Providers and ISPs</span>
-              <svg class="w-4 h-4 transition-transform duration-300 group-open:rotate-180" fill="none" stroke="currentColor"
-                stroke-width="2" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-              </svg>
-            </summary>
-            <div class="mt-2 pl-16 mb-8">
-              These companies manage the 5G infrastructure and are prime targets for disruption. Attacks could impact millions of users. Infrastructure downtime can have major economic consequences.
+        <div class="space-y-4">
+            <div class="space-y-2">
+                <h5 class="text-xl">Telecom Providers and ISPs</h5>
+                <p class="text-gray-200">
+                    These companies manage the 5G infrastructure and are prime targets for disruption. Attacks could impact millions of users. Infrastructure downtime can have major economic consequences.
+                </p>
             </div>
-          </details>
-        
-          <!-- Accordion Item 2 -->
-          <details class="group" open>
-            <summary class="flex items-center justify-between cursor-pointer list-disc list-inside text-base font-medium marker:text-white">
-              <span class="text-xl">Smart Device Manufacturers</span>
-              <svg class="w-4 h-4 transition-transform duration-300 group-open:rotate-180" fill="none" stroke="currentColor"
-                stroke-width="2" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-              </svg>
-            </summary>
-            <div class="mt-2 pl-16 mb-8">
-              Devices that lack firmware integrity or security-by-design principles are easily compromised. Poorly secured devices put entire networks at risk. Manufacturers face reputational damage.
+            <div class="space-y-2">
+                <h5 class="text-xl">Smart Device Manufacturers</h5>
+                <p class="text-gray-200">
+                    Devices that lack firmware integrity or security-by-design principles are easily compromised. Poorly secured devices put entire networks at risk. Manufacturers face reputational damage.
+                </p>
             </div>
-          </details>
-
-          <details class="group" open>
-            <summary class="flex items-center justify-between cursor-pointer list-disc list-inside text-base font-medium marker:text-white">
-              <span class="text-xl">Public and Critical Infrastructure</span>
-              <svg class="w-4 h-4 transition-transform duration-300 group-open:rotate-180" fill="none" stroke="currentColor"
-                stroke-width="2" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-              </svg>
-            </summary>
-            <div class="mt-2 pl-16 mb-8">
-              5G powers smart grids, transport systems, and emergency services. A successful attack could cripple essential services. The societal impact of disruption is severe.
+            <div class="space-y-2">
+                <h5 class="text-xl">Public and Critical Infrastructure</h5>
+                <p class="text-gray-200">
+                    5G powers smart grids, transport systems, and emergency services. A successful attack could cripple essential services. The societal impact of disruption is severe.
+                </p>
             </div>
-          </details>
+        </div>
         </div>
 
         <div class="space-y-4">
