--- a/future-cyber-threats/biohacking.html
+++ b/future-cyber-threats/biohacking.html
@@ -344,45 +344,26 @@
         <div class="text-white mt-8">
           <h3 class="text-2xl font-medium text-[#E2C8F1] mb-3">Practical Usage</h3>
         
-          <!-- Accordion Item 1 -->
-          <details class="group" open>
-            <summary class="flex items-center justify-between cursor-pointer list-disc list-inside text-base font-medium marker:text-white">
-              <span class="text-xl">Patients with Critical Implants</span>
-              <svg class="w-4 h-4 transition-transform duration-300 group-open:rotate-180" fill="none" stroke="currentColor"
-                stroke-width="2" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-              </svg>
-            </summary>
-            <div class="mt-2 pl-16 mb-8">
-              Individuals using devices like pacemakers or insulin pumps are directly exposed to life-threatening risks. Compromised functionality could result in medical emergencies. These users depend heavily on device integrity.
+        <div class="space-y-4">
+            <div class="space-y-2">
+                <h5 class="text-xl">Patients with Critical Implants</h5>
+                <p class="text-gray-200">
+                    Individuals using devices like pacemakers or insulin pumps are directly exposed to life-threatening risks. Compromised functionality could result in medical emergencies. These users depend heavily on device integrity.
+                </p>
             </div>
-          </details>
-        
-          <!-- Accordion Item 2 -->
-          <details class="group" open>
-            <summary class="flex items-center justify-between cursor-pointer list-disc list-inside text-base font-medium marker:text-white">
-              <span class="text-xl">Biohacker Enthusiasts</span>
-              <svg class="w-4 h-4 transition-transform duration-300 group-open:rotate-180" fill="none" stroke="currentColor"
-                stroke-width="2" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-              </svg>
-            </summary>
-            <div class="mt-2 pl-16 mb-8">
-              DIY biohackers implant unregulated chips for convenience or experimentation. These devices may lack encryption or authentication. Their open-source nature makes them vulnerable.
-          </details>
-
-          <details class="group" open>
-            <summary class="flex items-center justify-between cursor-pointer list-disc list-inside text-base font-medium marker:text-white">
-              <span class="text-xl">Healthcare Providers and Device Manufacturers</span>
-              <svg class="w-4 h-4 transition-transform duration-300 group-open:rotate-180" fill="none" stroke="currentColor"
-                stroke-width="2" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-              </svg>
-            </summary>
-            <div class="mt-2 pl-16 mb-8">
-              Hospitals and developers bear responsibility for device security. A single flaw could affect thousands of patients. Legal and reputational damage can be severe.
+            <div class="space-y-2">
+                <h5 class="text-xl">Biohacker Enthusiasts</h5>
+                <p class="text-gray-200">
+                    DIY biohackers implant unregulated chips for convenience or experimentation. These devices may lack encryption or authentication. Their open-source nature makes them vulnerable.
+                </p>
             </div>
-          </details>
+            <div class="space-y-2">
+                <h5 class="text-xl">Healthcare Providers and Device Manufacturers</h5>
+                <p class="text-gray-200">
+                    Hospitals and developers bear responsibility for device security. A single flaw could affect thousands of patients. Legal and reputational damage can be severe.
+                </p>
+            </div>
+        </div>
         </div>
 
         <div class="space-y-4">
