--- a/future-cyber-threats/decentralized-finance.html
+++ b/future-cyber-threats/decentralized-finance.html
@@ -345,45 +345,26 @@
           <h3 class="text-2xl font-medium text-[#E2C8F1] mb-3">Practical Usage</h3>
         
           <!-- Accordion Item 1 -->
-          <details class="group" open>
-            <summary class="flex items-center justify-between cursor-pointer list-disc list-inside text-base font-medium marker:text-white">
-              <span class="text-xl">Retail Crypto Investors</span>
-              <svg class="w-4 h-4 transition-transform duration-300 group-open:rotate-180" fill="none" stroke="currentColor"
-                stroke-width="2" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-              </svg>
-            </summary>
-            <div class="mt-2 pl-16 mb-8">
-                Individuals using DeFi apps often lack technical expertise. They are vulnerable to losses from protocol hacks or token manipulation. Their trust in DeFi systems makes them prime targets.
+        <div class="space-y-4">
+            <div class="space-y-2">
+                <h5 class="text-xl">Retail Crypto Investors</h5>
+                <p class="text-gray-200">
+                    Individuals using DeFi apps often lack technical expertise. They are vulnerable to losses from protocol hacks or token manipulation. Their trust in DeFi systems makes them prime targets.
+                </p>
             </div>
-          </details>
-        
-          <!-- Accordion Item 2 -->
-          <details class="group" open>
-            <summary class="flex items-center justify-between cursor-pointer list-disc list-inside text-base font-medium marker:text-white">
-              <span class="text-xl">DeFi Platform Developers</span>
-              <svg class="w-4 h-4 transition-transform duration-300 group-open:rotate-180" fill="none" stroke="currentColor"
-                stroke-width="2" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-              </svg>
-            </summary>
-            <div class="mt-2 pl-16 mb-8">
-                Code errors or lack of audits can lead to devastating exploits. Developers bear the reputational and financial fallout. Responsibility for security lies largely with them.
+            <div class="space-y-2">
+                <h5 class="text-xl">DeFi Platform Developers</h5>
+                <p class="text-gray-200">
+                    Code errors or lack of audits can lead to devastating exploits. Developers bear the reputational and financial fallout. Responsibility for security lies largely with them.
+                </p>
             </div>
-          </details>
-
-          <details class="group" open>
-            <summary class="flex items-center justify-between cursor-pointer list-disc list-inside text-base font-medium marker:text-white">
-              <span class="text-xl">Startups and New DeFi Projects</span>
-              <svg class="w-4 h-4 transition-transform duration-300 group-open:rotate-180" fill="none" stroke="currentColor"
-                stroke-width="2" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-              </svg>
-            </summary>
-            <div class="mt-2 pl-16 mb-8">
-                Emerging DeFi initiatives may lack proper funding for security audits. These projects are frequent targets for attackers exploiting minimal defenses. Their early-stage status makes recovery difficult.Code errors or lack of audits can lead to devastating exploits. Developers bear the reputational and financial fallout. Responsibility for security lies largely with them.
+            <div class="space-y-2">
+                <h5 class="text-xl">Startups and New DeFi Projects</h5>
+                <p class="text-gray-200">
+                    Emerging DeFi initiatives may lack proper funding for security audits. These projects are frequent targets for attackers exploiting minimal defenses. Their early-stage status makes recovery difficult.
+                </p>
             </div>
-          </details>
+        </div>
         </div>
 
         <div class="space-y-4">
