--- a/future-cyber-threats/quantum-computing-risks.html
+++ b/future-cyber-threats/quantum-computing-risks.html
@@ -344,46 +344,26 @@
         <div class="text-white mt-8">
           <h3 class="text-2xl font-medium text-[#E2C8F1] mb-3">Practical Usage</h3>
         
-          <!-- Accordion Item 1 -->
-          <details class="group" open>
-            <summary class="flex items-center justify-between cursor-pointer list-disc list-inside text-base font-medium marker:text-white">
-              <span class="text-xl">Financial Institutions</span>
-              <svg class="w-4 h-4 transition-transform duration-300 group-open:rotate-180" fill="none" stroke="currentColor"
-                stroke-width="2" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-              </svg>
-            </summary>
-            <div class="mt-2 pl-16 mb-8">
-                Banks and stock exchanges rely heavily on public key infrastructure. A quantum-enabled breach could allow unauthorized transactions or tampering with digital signatures. The consequences include fraud, financial loss, and trust erosion.
+        <div class="space-y-4">
+            <div class="space-y-2">
+                <h5 class="text-xl">Financial Institutions</h5>
+                <p class="text-gray-200">
+                    Banks and stock exchanges rely heavily on public key infrastructure. A quantum-enabled breach could allow unauthorized transactions or tampering with digital signatures. The consequences include fraud, financial loss, and trust erosion.
+                </p>
             </div>
-          </details>
-        
-          <!-- Accordion Item 2 -->
-          <details class="group" open>
-            <summary class="flex items-center justify-between cursor-pointer list-disc list-inside text-base font-medium marker:text-white">
-              <span class="text-xl">Government and Defense</span>
-              <svg class="w-4 h-4 transition-transform duration-300 group-open:rotate-180" fill="none" stroke="currentColor"
-                stroke-width="2" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-              </svg>
-            </summary>
-            <div class="mt-2 pl-16 mb-8">
-                Encrypted diplomatic and military communications are high-value targets. Compromise of these systems could impact national security. Preparing for quantum resilience is a top priority.
+            <div class="space-y-2">
+                <h5 class="text-xl">Government and Defense</h5>
+                <p class="text-gray-200">
+                    Encrypted diplomatic and military communications are high-value targets. Compromise of these systems could impact national security. Preparing for quantum resilience is a top priority.
+                </p>
             </div>
-          </details>
-
-          <details class="group" open>
-            <summary class="flex items-center justify-between cursor-pointer list-disc list-inside text-base font-medium marker:text-white">
-              <span class="text-xl">Cloud Service Providers</span>
-              <svg class="w-4 h-4 transition-transform duration-300 group-open:rotate-180" fill="none" stroke="currentColor"
-                stroke-width="2" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-              </svg>
-            </summary>
-            <div class="mt-2 pl-16 mb-8">
-                Many cloud services manage encrypted data for clients across industries. If quantum computers break traditional encryption, cloud-stored data could be exposed en masse. Providers must adopt quantum-safe standards to protect client data. Encrypted diplomatic and military communications are high-value targets. Compromise of these systems could impact national security. Preparing for quantum resilience is a top priority.
+            <div class="space-y-2">
+                <h5 class="text-xl">Cloud Service Providers</h5>
+                <p class="text-gray-200">
+                    Many cloud services manage encrypted data for clients across industries. If quantum computers break traditional encryption, cloud-stored data could be exposed en masse. Providers must adopt quantum-safe standards to protect client data.
+                </p>
             </div>
-          </details>
+        </div>
         </div>
 
         <div class="space-y-4">
