--- a/future-cyber-threats/smart-city.html
+++ b/future-cyber-threats/smart-city.html
@@ -344,46 +344,26 @@
         <div class="text-white mt-8">
           <h3 class="text-2xl font-medium text-[#E2C8F1] mb-3">Practical Usage</h3>
         
-          <!-- Accordion Item 1 -->
-          <details class="group" open>
-            <summary class="flex items-center justify-between cursor-pointer list-disc list-inside text-base font-medium marker:text-white">
-              <span class="text-xl">City Governments and Agencies</span>
-              <svg class="w-4 h-4 transition-transform duration-300 group-open:rotate-180" fill="none" stroke="currentColor"
-                stroke-width="2" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-              </svg>
-            </summary>
-            <div class="mt-2 pl-16 mb-8">
-                These organizations operate critical infrastructure and are primary targets for political or financial attacks. Breaches can erode public trust. Budget constraints hinder their ability to respond.
+        <div class="space-y-4">
+            <div class="space-y-2">
+                <h5 class="text-xl">City Governments and Agencies</h5>
+                <p class="text-gray-200">
+                    These organizations operate critical infrastructure and are primary targets for political or financial attacks. Breaches can erode public trust. Budget constraints hinder their ability to respond.
+                </p>
             </div>
-          </details>
-        
-          <!-- Accordion Item 2 -->
-          <details class="group" open>
-            <summary class="flex items-center justify-between cursor-pointer list-disc list-inside text-base font-medium marker:text-white">
-              <span class="text-xl">Vendors of Smart City Technologies</span>
-              <svg class="w-4 h-4 transition-transform duration-300 group-open:rotate-180" fill="none" stroke="currentColor"
-                stroke-width="2" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-              </svg>
-            </summary>
-            <div class="mt-2 pl-16 mb-8">
-                Third-party software and hardware providers may unknowingly introduce backdoors or flaws. A compromise in one vendor affects many systems. Accountability and vetting are essential.
+            <div class="space-y-2">
+                <h5 class="text-xl">Vendors of Smart City Technologies</h5>
+                <p class="text-gray-200">
+                    Third-party software and hardware providers may unknowingly introduce backdoors or flaws. A compromise in one vendor affects many systems. Accountability and vetting are essential.
+                </p>
             </div>
-          </details>
-
-          <details class="group" open>
-            <summary class="flex items-center justify-between cursor-pointer list-disc list-inside text-base font-medium marker:text-white">
-              <span class="text-xl">Citizens and Commuters</span>
-              <svg class="w-4 h-4 transition-transform duration-300 group-open:rotate-180" fill="none" stroke="currentColor"
-                stroke-width="2" viewBox="0 0 24 24">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-              </svg>
-            </summary>
-            <div class="mt-2 pl-16 mb-8">
-                People relying on smart systems for transport, power, and safety are indirectly at risk. Delays, outages, or manipulated data can lead to real-world consequences. Lack of user control worsens the impact.
+            <div class="space-y-2">
+                <h5 class="text-xl">Citizens and Commuters</h5>
+                <p class="text-gray-200">
+                    People relying on smart systems for transport, power, and safety are indirectly at risk. Delays, outages, or manipulated data can lead to real-world consequences. Lack of user control worsens the impact.
+                </p>
             </div>
-          </details>
+        </div>
         </div>
 
         <div class="space-y-4">
